# greenland-ird

./: .gitignore  README.md  pyproject.toml
basis/components/: conduit_network.py  jax_conduit_network.py  steady_state_drainage.py  subglacial_drainage_system.py
basis/components/hydrology/: steady_state_drainage.py
basis/utils/: grid_loader.py  interpolate.py  plotting.py  preprocess_geology.py
data/basin-outlines/regional/: SCO-NW.geojson  SCO-SE.geojson  SCO-SW.geojson
data/scripts/: clip-to-catchment.py
data/shapefiles/CE/: vestfjord-gletsjer.geojson
data/utils/: clip_to_catchment.py
igm/: download_opt.sh  igm.slurm  move_files.py  params_template.json  plot_result.py  upload_obs.sh
igm/model-runs/akullersuup-sermia/: clean.sh  igm-akullersuup-sermia.out  igm.out  igm.slurm  params.json  params_saved.json
igm/model-runs/bredegletsjer/: clean.sh  geology-optimized.nc  igm-bredegletsjer.out  igm.out  igm.slurm  params.json  params_saved.json
igm/model-runs/charcot-gletscher/: clean.sh  igm-charcot-gletscher.out  igm.out  igm.slurm  params.json  params_saved.json
igm/model-runs/daugaard-jensen-gletsjer/: geology-optimized.nc  igm.out  igm.slurm  (+3 more)
models/hydrology/: _eqip-hydrology.py  eqip-grid-loader.py  eqip-hydrology.py  eqip-sermia.grid  prototype-newton.py
notebooks/: hydrology-prototype.ipynb  plot-grid-scaling.ipynb  sliding-velocity.ipynb
slides/: shapefiles.odp
src/utils/: clip_to_catchment.py  generate_mesh.py
tests/: jax_performance.py  test_drainage_system.py  test_hydrologic_parameters.py  test_jax_conduit_network.py
tests/fixtures/: hydrology.py
(+106 files in other folders)
