[tool.poetry]
name = "greenland-ird"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
numpy = "^1.25.0"
rasterio = "^1.3.7"
rioxarray = "^0.14.1"
xarray = "^2023.6.0"
geopandas = "^0.13.2"
shapely = "^2.0.1"
scipy = "^1.11.0"
matplotlib = "^3.7.1"
netcdf4 = "^1.6.4"
triangle = "^20220202"
landlab = "^2.6.0"
pytest = "^7.4.0"
pytest-fixtures = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
