[tool.poetry]
name = "greenland-ird"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
numpy = "<=1.24.3"
rasterio = "^1.3.7"
rioxarray = "^0.14.1"
xarray = "^2023.6.0"
geopandas = "^0.13.2"
shapely = "^2.0.1"
scipy = "^1.11.0"
matplotlib = "^3.7.1"
netcdf4 = "^1.6.4"
triangle = "^20220202"
landlab = { git = "git@github.com:ethan-pierce/landlab.git", branch = "ethan-pierce/improved_mesh_gen" }
pytest = "^7.4.0"
pytest-fixtures = "^0.1.0"
jupyterlab = "^4.0.4"
jax = "^0.4.14"
jaxopt = "^0.8"
diffrax = "^0.4.1"
equinox = "^0.10.11"
tensorflow = "^2.13.0"
optax = "^0.1.7"
lineax = "^0.0.1"
flake8 = "^6.1.0"
pyproject-flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true


[tool.flake8]
max-line-length = 98
